Update carbon.sh files for analytics profiles